--- a/DesktopClient/Views/HtmlViews/RichTextBox.html
+++ b/DesktopClient/Views/HtmlViews/RichTextBox.html
@@ -17,7 +17,9 @@
             margin: 0;
             padding: 0;
         }
-
+        body {
+            background-color: white;
+        }
         .ck-editor__editable_inline {
             min-height: 250px;
         }
