--- a/DesktopClient/Views/SystemRequirmentsView.axaml
+++ b/DesktopClient/Views/SystemRequirmentsView.axaml
@@ -105,7 +105,7 @@
                             Margin="0,5,0,0"
                             HorizontalContentAlignment="Left"
                             Items="{Binding InputDevices}"
-                            SelectedIndex="0">
+                            SelectedIndex="{Binding InputSelectedIndex, Mode=TwoWay}">
                             <ComboBox.ItemTemplate>
                                 <DataTemplate>
                                     <StackPanel HorizontalAlignment="Left" Orientation="Horizontal">
@@ -121,7 +121,11 @@
                             Foreground="Green"
                             Value="fa-check" />
                     </StackPanel>
-					<ProgressBar Value="{Binding MicrophoneLevel}" HorizontalAlignment="Left" Width="250" Margin="0 1 0 15" />
+                    <ProgressBar
+                        Width="250"
+                        Margin="0,1,0,15"
+                        HorizontalAlignment="Left"
+                        Value="{Binding MicrophoneLevel}" />
                     <TextBlock FontWeight="SemiBold" Text="Audio output" />
                     <StackPanel Orientation="Horizontal">
                         <ComboBox
@@ -129,7 +133,7 @@
                             Margin="0,5,0,15"
                             HorizontalContentAlignment="Left"
                             Items="{Binding OutputDevices}"
-                            SelectedIndex="0">
+                            SelectedIndex="{Binding OutputSelectedIndex, Mode=TwoWay}">
                             <ComboBox.ItemTemplate>
                                 <DataTemplate>
                                     <StackPanel HorizontalAlignment="Left" Orientation="Horizontal">
