--- a/DesktopClient/Views/MainWindow.axaml
+++ b/DesktopClient/Views/MainWindow.axaml
@@ -10,6 +10,7 @@
     Title="examClientMVVM"
     d:DesignHeight="450"
     d:DesignWidth="800"
+	Topmost="false"
     Icon="/Assets/avalonia-logo.ico"
     Initialized="Loaded">
 
